Switch desktop application shell to JavaFX